--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
 /*.egg
+
+# rst README (run pandoc README.md --from markdown --to rst -s -o README.rst)
+README.rst
