--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # rst README (run pandoc README.md --from markdown --to rst -s -o README.rst)
 README.rst
+
+# Code checkpoints
+precession_checkpoints/
