--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
     # Example of using a custom build-command.
     - name: Install packages
       run : |
-        pip install nbsphinx
+        pip install nb2plots
     - uses: BrianJKoopman/sphinx-action@master
       with:
         build-command: "make html"
