--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,6 +16,7 @@ jobs:
       run: |
         brew install pandoc
         pip install nb2plots
+        echo "/Library/Frameworks/Python.framework/Versions/2.7/bin" >> $GITHUB_PATH
         nb2plots utils/examples.ipynb > docs/examples.rst
     - uses: BrianJKoopman/sphinx-action@master
       with:
