--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,10 +5,8 @@ on:
     branches: [ dev ]
 
 jobs:
-  build:
-
+  convertjupyter:
     runs-on: macos-latest
-
     steps:
     - uses: actions/checkout@v2
     # Example of using a custom build-command.
@@ -17,28 +15,32 @@ jobs:
       with:
         python-version: '3.9'
     - run: pip install nb2plots
-    - run: nb2plots utils/examples.ipynb > docs/examples.rst
-    - uses: BrianJKoopman/sphinx-action@master
+    - run: nb2plots utils/examples.ipynb > examples.rst
+
+    - uses: actions/upload-artifact@master
       with:
-        build-command: "make html"
-        docs-folder: "docs/"
-    # Publish built docs to gh-pages branch.
-    # ===============================
-    - name: Commit documentation changes
-      run: |
-        git clone https://github.com/dgerosa/precession.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
-        cd gh-pages
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update documentation" -a || true
-        # The above command will fail if no changes were present, so we ignore
-        # that.
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        branch: gh-pages
-        directory: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-    # ===============================
+        name: examples.rst
+        path: examples.rst
+
+    # - uses: BrianJKoopman/sphinx-action@master
+    #   with:
+    #     build-command: "make html"
+    #     docs-folder: "docs/"
+    # # Publish built docs to gh-pages branch.
+    # # ===============================
+    # - name: Commit documentation changes
+    #   run: |
+    #     git clone https://github.com/dgerosa/precession.git --branch gh-pages --single-branch gh-pages
+    #     cp -r docs/_build/html/* gh-pages/
+    #     cd gh-pages
+    #     git config --local user.email "action@github.com"
+    #     git config --local user.name "GitHub Action"
+    #     git add .
+    #     git commit -m "Update documentation" -a || true
+    # - name: Push changes
+    #   uses: ad-m/github-push-action@master
+    #   with:
+    #     branch: gh-pages
+    #     directory: gh-pages
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    # # ===============================
