--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,29 +20,30 @@ jobs:
       with:
         name: examples.rst
         path: docs/examples.rst
-  
-  # builddocs:
-  #   runs-on: macos-latest
-#    steps:
-    # - uses: BrianJKoopman/sphinx-action@master
-    #   with:
-    #     build-command: "make html"
-    #     docs-folder: "docs/"
-    # # Publish built docs to gh-pages branch.
-    # # ===============================
-    # - name: Commit documentation changes
-    #   run: |
-    #     git clone https://github.com/dgerosa/precession.git --branch gh-pages --single-branch gh-pages
-    #     cp -r docs/_build/html/* gh-pages/
-    #     cd gh-pages
-    #     git config --local user.email "action@github.com"
-    #     git config --local user.name "GitHub Action"
-    #     git add .
-    #     git commit -m "Update documentation" -a || true
-    # - name: Push changes
-    #   uses: ad-m/github-push-action@master
-    #   with:
-    #     branch: gh-pages
-    #     directory: gh-pages
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
-    # # ===============================
+
+
+  builddocs:
+    runs-on: macos-latest
+    steps:
+    - uses: BrianJKoopman/sphinx-action@master
+      with:
+        build-command: "make html"
+        docs-folder: "docs/"
+    # Publish built docs to gh-pages branch.
+    # ===============================
+    - name: Commit documentation changes
+      run: |
+        git clone https://github.com/dgerosa/precession.git --branch gh-pages --single-branch gh-pages
+        cp -r docs/_build/html/* gh-pages/
+        cd gh-pages
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add .
+        git commit -m "Update documentation" -a || true
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        branch: gh-pages
+        directory: gh-pages
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+    # ===============================
