--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
-    # Example of using a custom build-command.
     - run: brew install pandoc
     - uses: actions/setup-python@v4
       with:
         python-version: '3.9'
+    - run: pip install -r requirements.txt
     - run: pip install nb2plots
     - name: convert
       run: |
