--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -54,8 +54,7 @@ jobs:
         build-command: "make html"
         docs-folder: "docs/"
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs/_build/html
